Release 3.2.1:
feat(results table): smoother way of selecting custom parameters to show
fix(spectrum viewer): hide mz labels when isotope is assigned to improve visibility
fix(align): support aligning of computed channels (e.g., sum of isotopes)
fix(colors): use sample color for mass spectrum in viewer
fix(align): remember all contributing isotopes instead of only the first
feat(Nu import): add support for gzip compressed integ files
fix(list selection dialog): prevent crash on empty selection
feat(sum formula): parser accepts fractional index numbers
fix(cut time region): cut is also applied to the spectral data of non-loaded isotopes